# simple-Persian-Diffusion-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: generate.py  make_gif.py  train.py
src/persian_diffusion_llm/: __init__.py  config.py  data.py  diffusion.py  generate.py  make_gif.py  model.py  sampling.py  tokenizer.py  train.py  visualize.py
